Updated HTML GUI

--- a/templates/index.html
+++ b/templates/index.html
@@ -14,7 +14,7 @@
 <body>
  <div class="login">
 	<h1>Get Rent Estimate for Calgary (Accurate to within $160!!)</h1>
-	<h2> Put in your requirements for the type of rental you want in Calgary and press 'predict' to get a monthly estimate.  The predicted amount will be correct to within $160 of what you will find on doing a real life search on the ground (all thanks to machine-learning).  </h2>
+	<h2> Put in your requirements for the type of rental you want in Calgary and press 'predict' to get a monthly estimate.  The predicted amount will be correct to within $160 of what you will find on doing a real life search on the ground (all thanks to machine-learning). For listing with better building features (like swimming pool) and property features (like jacuzzi) enter higher scores (~20) respectively.  </h2>
 
      <!-- Main Input For Receiving Query to our ML -->
     <form action="{{ url_for('predict')}}"method="post">
